prevent swiper slides overflow

--- a/styles.css
+++ b/styles.css
@@ -37,14 +37,14 @@
 }
 
 html {
+    width: 100vw;
     font-family: var(--font-family);
     font-size: var(--increment);
 }
 
 body {
-    overflow: scroll;
-    width: 100vw;
-    height: 100vh;
+    overflow-y: scroll;
+    overflow-x: hidden;
     margin: 0;
     background-color: var(--background-color);
     -webkit-transition: background-color 150ms;
@@ -133,6 +133,10 @@ p {
 .swiper-container {
     height: 100%;
     overflow: initial;
+}
+
+.swiper-wrapper {
+    overflow-x: hidden;
 }
 
 .swiper-container-horizontal > .swiper-pagination-bullets {
